# fpga_lib

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  LICENSE  MAP.md  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_gen.py  setup.py  tox.ini
.agent/rules/: global.md  map_template.md  python.md  vscode.md
.github/instructions/: copilot.instructions.md  visual-styling.md
.husky/: pre-commit
docs/: AI_PARSER_QUICKSTART.md  ARCHITECTURE.md  CODE_FORMATTING.md  FORMATTING_ARCHITECTURE.md  IP_YAML_FORMAT.md  LLM_PARSER_MIGRATION.md  PARSER_COMPARISON.md  PURE_LLM_PARSER.md  ROADMAP.md  TESTING_VHDL_PARSER.md  TUI_DESIGN_PLAN.md  VSCODE_EXTENSION_DEV_PLAN.md  VSCODE_EXTENSION_DEV_PLAN_v2.md  VSCODE_EXTENSION_PLAN.md  VSCODE_EXTENSION_WIREFRAME.html  VSCODE_EXTENSION_WIREFRAME.md  concept_ip_core_blueprint.md  concept_memory_map.md  concept_python_driver.md  notes.md  plan.md
examples/: ai_parser_demo.py
examples/gpio/: README.md  __init__.py  bus_backends.py  bus_interface.py  config.py  demo.py  examples.py  gpio_driver.py  gpio_memory_map.yaml  gpio_wrapper.py  memory_map_loader.py  register_examples.py  test_gpio.py  yaml_demo.py
examples/hdl/: 01_minimal_axil_slave.vhd  02_multi_bus_custom_ports.vhd  03_interface_array.vhd  04_custom_naming_and_overrides.vhd  05_custom_descriptor.vhd
fpga_lib/core/: port.py  (+15 more)
ipcore_spec/: COMPLETION_NOTES.md  README.md
ipcore_tools/: README.md
protocols/: avalon_mm_master.yaml  avalon_mm_slave.yaml  avalon_st_sink.yaml  avalon_st_source.yaml  axi4_full_slave.yaml  axi4_lite_slave.yaml  axi4_stream_master.yaml  axi4_stream_slave.yaml
resources/: modern-regedit.html  register-editor-v2.html
scripts/: README.md  generate_schema.py  generate_vhdl.py  ipcore.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+493 files in other folders)
