[project]
name = "ipcore_lib"
version = "0.1.0"
description = "A Python library for IP Core development and VHDL generation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jinja2",
    "rich",
    "openai",
    "python-dotenv",
    "pydantic",
    "PySide6",
    "pyyaml",
    "textual",
    "pyparsing",
    "dataclasses-json",
    "click"
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
testpaths = ["ipcore_lib/tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "cocotb",
    "cocotb-bus",
    "cocotbext-axi"
]
dev = [
    "black",
    "mypy"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipcore_lib*", "scripts*"]

